feat(create): Add Next.js storefront option to create command (#4015)

--- a/packages/create/templates/.env.hbs
+++ b/packages/create/templates/.env.hbs
@@ -1,5 +1,5 @@
 APP_ENV=dev
-PORT=3000
+PORT={{ port }}
 COOKIE_SECRET={{ cookieSecret }}
 SUPERADMIN_USERNAME={{{ escapeSingle superadminIdentifier }}}
 SUPERADMIN_PASSWORD={{{ escapeSingle superadminPassword }}}
