--- a/packages/create/templates/vite.config.hbs
+++ b/packages/create/templates/vite.config.hbs
@@ -16,7 +16,7 @@ export default defineConfig({
             // and custom fields that are configured.
             vendureConfigPath: pathToFileURL('./src/vendure-config.ts'),
             // Points to the location of your Vendure server.
-            api: { host: 'http://localhost', port: 3000 },
+            api: { host: 'http://localhost', port: {{ port }} },
             // When you start the Vite server, your Admin API schema will
             // be introspected and the types will be generated in this location.
             // These types can be used in your dashboard extensions to provide
